added Prim's algorithm

--- a/src/Components/PathfindingVisualizer/NavBar/NavBar.css
+++ b/src/Components/PathfindingVisualizer/NavBar/NavBar.css
@@ -5,10 +5,28 @@
 #clear{
     color: white;
 }
-img{
+.notations{
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+
+}
+
+.notation{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.notations > .notation > img{
     height: 20px;
-    width:30px;
-    margin-left: 50px;
+    object-fit: contain;
+    padding-left: 2px;
+    margin-right: 5px;
+
+}
+.notations > .notation > span{
+    font-weight: 500;
 }
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(255,255,255,1);
