--- a/src/Components/PathfindingVisualizer/Node/Node.css
+++ b/src/Components/PathfindingVisualizer/Node/Node.css
@@ -1,16 +1,20 @@
 .node{
-    width: 28px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
     outline: 1px solid lightblue;
 }
 
 .node-start{
-    background-image: url("./images/initial.png");
-    background-size:contain;
+    background-image: url(./images/start.png);
+    background-size:22px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .node-end{
-    background-image: url("./images/destination.png");
-    background-size: contain;
+    background-image: url(./images/destination.png);
+    background-size:21px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 
